- Fixed bug #62033 (php-fpm exits with status 0 on some failures to start)